apps/monitoring/loki-memberlist-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-memberlist
  namespace: monitoring
  labels:
    app.kubernetes.io/name: loki
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: loki
  ports:
  - name: http
    port: 7946
    targetPort: 7946
    protocol: TCP
