apps/monitoring/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
  - "app-monitor.local"
  gateways:
  - istio-system/monitoring-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kube-prometheus-stack-grafana
        port:
          number: 3000
    headers:
      response:
        add:
          strict-transport-security: "max-age=31536000; includeSubDomains"
